# foss-greenspace

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  tamilnadu_green_space_analyzer.html
backend/: app.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AnalyzerUI.jsx  MapPanel.jsx  MetricsPanel.jsx  SidebarPanel.jsx
greengrid/: __init__.py  analysis.py  osm_utils.py
