[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greengrid"
version = "0.1.0"
description = "GreenGrid TN — Open urban green-space intelligence (prototype)"
authors = [ { name = "Greengrid Dev" } ]
dependencies = [
  "python>=3.10",
  "osmnx>=1.3",
  "geopandas>=0.12",
  "requests",
  "streamlit>=1.20",
  "streamlit-folium>=0.14",
  "folium>=0.14",
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "shapely>=2.0",
  "rtree",
  "pyproj",
  "pandas",
  "numpy"
]

[tool.setuptools]
package-dir = {"" = ""}
[project]
name = "greenspace-foss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
